--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
     "target": "es2021",
     "module": "commonjs",
     "lib": ["dom", "esnext"],
     "declaration": true,
     "declarationMap": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "strict": true,
     "pretty": true,
     "sourceMap": true,
@@ -19,6 +20,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "allowJs": true,
+    "noImplicitAny": true,
     "outDir": "release/app/dist"
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
